# netperftest

./: .gitignore  README.md  pyproject.toml  setup.py
netperftest/: __init__.py  __main__.py  netperftest.py
tests/: test_auth.py  test_cli.py  test_streamable.py  test_testers.py
