[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netperftest"
version = "0.0.1"
description = "A tiny CLI that measures latency, download, and upload performance for a destination."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "humblre" }]
keywords = ["network", "latency", "bandwidth", "benchmark", "cli"]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
netperftest = "netperftest.netperftest:shell"

[tool.setuptools]
packages = ["netperftest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.format]
quote-style = "single"
